--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <script src="./valor_referencia.js">
+    <script src="./Soma.js">
      
 
    
